SERVER-9182 Allow restores of dumps containing edited .metadata.json files